--- a/Python elementary.ipynb
+++ b/Python elementary.ipynb
@@ -761,9 +761,147 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7936ab9",
+   "metadata": {},
+   "source": [
+    "# Logical\n",
+    "They are used on conditional statements such as;\n",
+    "- and = checks two or more conditons if true\n",
+    "- or = checks if atleast one condition is true\n",
+    "- not = true if condition is false, and vise versa.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12a88013",
+   "metadata": {},
+   "source": [
+    "#  and"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "34937ab0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the temperature is good\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = 25\n",
+    "if temp > 0 and temp < 30:\n",
+    "    print(\"the temperature is good\")\n",
+    "else:\n",
+    "    print(\"the temperature is bad\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "170b2678",
+   "metadata": {},
+   "source": [
+    "# or"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ed3b9bda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the temperature is good\n"
+     ]
+    }
+   ],
+   "source": [
+    "if temp > 0 or temp < 30:\n",
+    "   print(\"the temperature is good\")\n",
+    "else:\n",
+    "   print(\"the temperature is bad\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7024478",
+   "metadata": {},
+   "source": [
+    "# not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3488d8cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "it is sunny outside\n"
+     ]
+    }
+   ],
+   "source": [
+    "sunny = True\n",
+    "if  sunny:\n",
+    "  print(\"it is sunny outside\")\n",
+    "else:\n",
+    "  print(\"it is cloudy outside\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5e9cbef9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "it is cloudy outside\n"
+     ]
+    }
+   ],
+   "source": [
+    "sunny = True\n",
+    "if not sunny:\n",
+    "  print(\"it is sunny outside\")\n",
+    "else:\n",
+    "  print(\"it is cloudy outside\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "160650c6",
+   "metadata": {},
+   "source": [
+    "# bitwise\n",
+    "they act on operands as if they are strings of binary digits. They operate bit by bit, hence the name. \n",
+    "\n",
+    "## list of bitwise operators\n",
+    "1. bitwise AND(&)\n",
+    "2. bitwise OR(|)\n",
+    "3. bitwise NOT (~)\n",
+    "4. bitwise XOR (^)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ba2073e",
+   "id": "46e32f31",
    "metadata": {},
    "outputs": [],
    "source": []
