--- a/Python elementary.ipynb
+++ b/Python elementary.ipynb
@@ -899,9 +899,227 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15274c68",
+   "metadata": {},
+   "source": [
+    "# bitwise AND (&)\n",
+    "- Returns 1 if both bits are 1, else it returns 0.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c9624294",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b0'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 5\n",
+    "bin (a & b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3c4b622b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 5\n",
+    "a & b\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc6e35ee",
+   "metadata": {},
+   "source": [
+    "# bitwise OR (|)\n",
+    "- Returns 1 if any of the bits is 1, else it returns 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cabb0fea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b1111'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 5\n",
+    "bin (a | b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "996c359e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 5\n",
+    "a | b\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "816c2872",
+   "metadata": {},
+   "source": [
+    "# bitwise NOT (~)\n",
+    "- returns one's compliment of a number\n",
+    "- one's compliment means each bit will be complimented in the given number and compliment means the bit will be flipped, meaning 0 becomes 1 andd 1 becomes 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e482d7f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b1010'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "bin(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e3348fe4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-11"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "~a "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c11ddd2",
+   "metadata": {},
+   "source": [
+    "# bitwise XNOT(^)\n",
+    "- Returns 1 if one of the bits is 1, else it returns 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "723d16d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 9\n",
+    "a ^ b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "28bc8c58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b11'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 9\n",
+    "bin(a ^ b)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46e32f31",
+   "id": "d28708bf",
    "metadata": {},
    "outputs": [],
    "source": []
